src/test/ui/dropck/drop-on-non-struct.stderr
error[E0120]: the Drop trait may only be implemented on structures
  --> $DIR/drop-on-non-struct.rs:1:19
   |
LL | impl<'a> Drop for &'a mut isize {
   |                   ^^^^^^^^^^^^^ implementing Drop requires a struct

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/drop-on-non-struct.rs:1:1
   |
LL | impl<'a> Drop for &'a mut isize {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference only types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0117, E0120.
For more information about an error, try `rustc --explain E0117`.
